Make sure hint markers cannot be line-wrapped

--- a/extension/resources/style.css
+++ b/extension/resources/style.css
@@ -93,6 +93,7 @@
 }
 
 .VimFxHintMarker {
+    white-space: nowrap;
     position: absolute;
     padding: 1px 2px 0 2px;
     line-height: 1;
